--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         </h2>
         <section class="sectionDestacados">
             <div class="imagenesTrago">
-                <img src="/images/trago1.jpg" alt="Trago" width="350em" height="350em" class="cocktail">
+                <img src="images/trago1.jpg" alt="Trago" width="350em" height="350em" class="cocktail">
             </div>
             <div class="imagenesTrago">
-                <img src="/images/trago2.jpg" alt="Trago" width="350em" height="350em" class="cocktail">
+                <img src="images/trago2.jpg" alt="Trago" width="350em" height="350em" class="cocktail">
             </div>
         </section>
         <section class="sectionQuieneSomos">
