--- a/index.html
+++ b/index.html
@@ -177,17 +177,17 @@
                         <h2>Redes Sociales</h2>
 
                         <div class="filaRedes">
-                            <img src="/iconos/facebook.png">
+                            <img src="iconos/facebook.png">
                             <label>Siguenos en Facebook</label>
                         </div>
 
                         <div class="filaRedes">
-                            <img src="/iconos/twittercolor.png">
+                            <img src="iconos/twittercolor.png">
                             <label>Siguenos en Twitter</label>
                         </div>
 
                         <div class="filaRedes">
-                            <img src="/iconos/instagram.png">
+                            <img src="iconos/instagram.png">
                             <label>Siguenos en Instagram</label>
 
                         </div>
@@ -197,17 +197,17 @@
 
                         <h2>Información Contacto</h2>
                         <div class="fila2">
-                            <img src="/iconos/casa.png">
+                            <img src="iconos/casa.png">
 
                             <label>Callao 2028, Buenos Aires.</label>
                         </div>
                         <div class="fila2">
-                            <img src="/iconos/telefono.png">
+                            <img src="iconos/telefono.png">
 
                             <label>+54 911 2020-2934</label>
                         </div>
                         <div class="fila2">
-                            <img src="/iconos/email.png">
+                            <img src="iconos/email.png">
 
                             <label>curtisbar@gmail.com</label>
                         </div>
